Bug 503762 - Unable to install language packages
Summary: Unable to install language packages
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_regionandlang (other bugs)
Version First Reported In: 6.3.4
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-05-04 15:48 UTC by Philipp Kiemle
Modified: 2025-06-04 21:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Philipp Kiemle 2025-05-04 15:48:53 UTC
SUMMARY
I am unable to set my language (German) in Kubuntu settings, many programs default to English.
It seems to attempt to install some package but fails, can I install it manually as a workaround? What should I install for German?

STEPS TO REPRODUCE
1. Open System settings
2. Go to "Region and Language"
3. Click on "Change" next to "Language", the first button in the list.
4. Choose a language and apply.

OBSERVED RESULT
An error message appears, curiously half in German, half in English:
"Fehler beim Installieren von Paket Failed to obtain authentication."

EXPECTED RESULT
The language is applied, and (maybe after a reboot, if necessary), all programs will be translated.

SOFTWARE/OS VERSIONS
Operating System: Kubuntu 25.04
KDE Plasma Version: 6.3.4
KDE Frameworks Version: 6.12.0
Qt Version: 6.8.3
Kernel Version: 6.14.0-15-generic (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i7-6700K CPU @ 4.00GHz
Memory: 15.6 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 970
Manufacturer: Gigabyte Technology Co., Ltd.
Product Name: Z170-Gaming K3
Comment 1 hanyoung 2025-05-05 08:47:28 UTC
Did you refuse the password prompt? Or is there a password prompt at all?
Comment 2 Philipp Kiemle 2025-05-05 13:41:07 UTC
(In reply to hanyoung from comment #1)
> Did you refuse the password prompt? Or is there a password prompt at all?

No, I did not refuse any prompt to enter my password - when I selected the German language and hit apply, the error message appeared without showing me a password prompt at all.

I can reproduce this when I try to add a second, third etc language to my system.
Comment 3 hanyoung 2025-05-11 15:41:45 UTC
I currently do not have a Kubuntu system, I'll try to install one and try to recreate the issue.
Comment 4 Philipp Kiemle 2025-05-11 20:19:26 UTC
(In reply to hanyoung from comment #3)
> I currently do not have a Kubuntu system, I'll try to install one and try to
> recreate the issue.

Oh yeah - this was on a fresh "minimal" install, btw.
Comment 5 hanyoung 2025-06-02 07:10:28 UTC
I tested on KDE neon unstable, the first button in "Language" is "C". When clicking C, the error message did appear. But if I click on other languages like Deutsch or Dansk, the error is not raised. Is other language work for you? The "C" language is an edge case because it is a "special" fallback locale.
Comment 6 Bug Janitor Service 2025-06-02 07:21:21 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5555
Comment 7 Philipp Kiemle 2025-06-02 08:05:45 UTC
(In reply to hanyoung from comment #5)
> I tested on KDE neon unstable, the first button in "Language" is "C". When
> clicking C, the error message did appear. But if I click on other languages
> like Deutsch or Dansk, the error is not raised. Is other language work for
> you? The "C" language is an edge case because it is a "special" fallback
> locale.

I did not test it with the "C" locale, I tried to change my language from the post-install default ("en-US", IIRC) to de_DE.
Comment 8 hanyoung 2025-06-02 14:59:39 UTC
I installed Kubuntu 25.04, changing language from American English to Deutsch succeeds.
Comment 9 hanyoung 2025-06-03 16:38:50 UTC
Git commit b486b02a39c574209636aa30bc359b77ddb1b1d6 by Han Young.
Committed on 03/06/2025 at 14:17.
Pushed by hanyoung into branch 'master'.

kcm/region_language: do not check language support for C on Ubuntu

Fallback locale C does not have language support, checking for it
results in check-language-support error.

M  +4    -0    kcms/region_language/localegeneratorubuntu.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/b486b02a39c574209636aa30bc359b77ddb1b1d6
Comment 10 hanyoung 2025-06-04 13:29:38 UTC
Git commit d90d19e6e0590ae01d65e3f1d043c60e390a808e by Han Young.
Committed on 04/06/2025 at 13:29.
Pushed by hanyoung into branch 'Plasma/6.4'.

kcm/region_language: do not check language support for C on Ubuntu

Fallback locale C does not have language support, checking for it
results in check-language-support error.


(cherry picked from commit b486b02a39c574209636aa30bc359b77ddb1b1d6)

Co-authored-by: Han Young <hanyoung@protonmail.com>

M  +4    -0    kcms/region_language/localegeneratorubuntu.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/d90d19e6e0590ae01d65e3f1d043c60e390a808e