kcm/region_language: do not check language support for C on Ubuntu

Fallback locale C does not have language support, checking for it
results in check-language-support error.

BUG: 503762